src/main/java/parse/R5RSParser.java
// $ANTLR 3.5.2 R5RS.g3 2017-01-07 14:50:55

package parse;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class R5RSParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARROW", "BEGIN", "CASE", 
		"CHARACTER", "CHARACTER_NAME", "COMMENT", "COMPLEX_10", "COMPLEX_16", 
		"COMPLEX_2", "COMPLEX_8", "COND", "DECIMAL_10", "DEFINE", "DEFINE_SYNTAX", 
		"DELAY", "DIGIT", "DIGIT_16", "DIGIT_2", "DIGIT_8", "DO", "ELLIPSIS", 
		"ELSE", "EXACTNESS", "EXPONENT_MARKER", "FALSE", "IF", "INITIAL", "LAMBDA", 
		"LET", "LETREC", "LETREC_SYNTAX", "LETSTAR", "LETTER", "LET_SYNTAX", "NUM_10", 
		"NUM_16", "NUM_2", "NUM_8", "OR", "PECULIAR_IDENTIFIER", "PREFIX_10", 
		"PREFIX_16", "PREFIX_2", "PREFIX_8", "QUASIQUOTE", "QUOTE", "RADIX_10", 
		"RADIX_16", "RADIX_2", "RADIX_8", "REAL_10", "REAL_16", "REAL_2", "REAL_8", 
		"SET", "SIGN", "SPACE", "SPECIAL_INITIAL", "SPECIAL_SUBSEQUENT", "STRING", 
		"STRING_ELEMENT", "SUBSEQUENT", "SUFFIX", "SYNTAX_RULES", "TRUE", "UINTEGER_10", 
		"UINTEGER_16", "UINTEGER_2", "UINTEGER_8", "UNQUOTE", "UNQUOTE_SPLICING", 
		"UREAL_10", "UREAL_16", "UREAL_2", "UREAL_8", "VARIABLE", "'#('", "'('", 
		"')'", "','", "',@'", "'.'", "'\\''", "'`'"
	};
	public static final int EOF=-1;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int AND=4;
	public static final int ARROW=5;
	public static final int BEGIN=6;
	public static final int CASE=7;
	public static final int CHARACTER=8;
	public static final int CHARACTER_NAME=9;
	public static final int COMMENT=10;
	public static final int COMPLEX_10=11;
	public static final int COMPLEX_16=12;
	public static final int COMPLEX_2=13;
	public static final int COMPLEX_8=14;
	public static final int COND=15;
	public static final int DECIMAL_10=16;
	public static final int DEFINE=17;
	public static final int DEFINE_SYNTAX=18;
	public static final int DELAY=19;
	public static final int DIGIT=20;
	public static final int DIGIT_16=21;
	public static final int DIGIT_2=22;
	public static final int DIGIT_8=23;
	public static final int DO=24;
	public static final int ELLIPSIS=25;
	public static final int ELSE=26;
	public static final int EXACTNESS=27;
	public static final int EXPONENT_MARKER=28;
	public static final int FALSE=29;
	public static final int IF=30;
	public static final int INITIAL=31;
	public static final int LAMBDA=32;
	public static final int LET=33;
	public static final int LETREC=34;
	public static final int LETREC_SYNTAX=35;
	public static final int LETSTAR=36;
	public static final int LETTER=37;
	public static final int LET_SYNTAX=38;
	public static final int NUM_10=39;
	public static final int NUM_16=40;
	public static final int NUM_2=41;
	public static final int NUM_8=42;
	public static final int OR=43;
	public static final int PECULIAR_IDENTIFIER=44;
	public static final int PREFIX_10=45;
	public static final int PREFIX_16=46;
	public static final int PREFIX_2=47;
	public static final int PREFIX_8=48;
	public static final int QUASIQUOTE=49;
	public static final int QUOTE=50;
	public static final int RADIX_10=51;
	public static final int RADIX_16=52;
	public static final int RADIX_2=53;
	public static final int RADIX_8=54;
	public static final int REAL_10=55;
	public static final int REAL_16=56;
	public static final int REAL_2=57;
	public static final int REAL_8=58;
	public static final int SET=59;
	public static final int SIGN=60;
	public static final int SPACE=61;
	public static final int SPECIAL_INITIAL=62;
	public static final int SPECIAL_SUBSEQUENT=63;
	public static final int STRING=64;
	public static final int STRING_ELEMENT=65;
	public static final int SUBSEQUENT=66;
	public static final int SUFFIX=67;
	public static final int SYNTAX_RULES=68;
	public static final int TRUE=69;
	public static final int UINTEGER_10=70;
	public static final int UINTEGER_16=71;
	public static final int UINTEGER_2=72;
	public static final int UINTEGER_8=73;
	public static final int UNQUOTE=74;
	public static final int UNQUOTE_SPLICING=75;
	public static final int UREAL_10=76;
	public static final int UREAL_16=77;
	public static final int UREAL_2=78;
	public static final int UREAL_8=79;
	public static final int VARIABLE=80;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public R5RSParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public R5RSParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return R5RSParser.tokenNames; }
	@Override public String getGrammarFileName() { return "R5RS.g3"; }


	static class BeginCommandOrDefinitionNode extends CommonTree {public BeginCommandOrDefinitionNode(Token t) {super(t);}}
	static class DefinitionNode extends CommonTree {public DefinitionNode(Token t) {super(t);}}
	static class DefFormalsNode extends CommonTree {public DefFormalsNode(Token t) {super(t);}}
	static class VariableNode extends CommonTree {public VariableNode(Token t) {super(t);}}
	static class EllipsisNode extends CommonTree {public EllipsisNode(Token t) {super(t);}}


	public static class parse_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "parse"
	// R5RS.g3:45:1: parse : ( commandOrDefinition )* EOF ;
	public final R5RSParser.parse_return parse() throws RecognitionException {
		R5RSParser.parse_return retval = new R5RSParser.parse_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope commandOrDefinition1 =null;

		Object EOF2_tree=null;

		try {
			// R5RS.g3:46:3: ( ( commandOrDefinition )* EOF )
			// R5RS.g3:46:6: ( commandOrDefinition )* EOF
			{
			root_0 = (Object)adaptor.nil();


			// R5RS.g3:46:6: ( commandOrDefinition )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==CHARACTER||LA1_0==ELLIPSIS||LA1_0==FALSE||(LA1_0 >= NUM_10 && LA1_0 <= NUM_8)||LA1_0==STRING||LA1_0==TRUE||LA1_0==VARIABLE||LA1_0==82||(LA1_0 >= 87 && LA1_0 <= 88)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// R5RS.g3:46:6: commandOrDefinition
					{
					pushFollow(FOLLOW_commandOrDefinition_in_parse52);
					commandOrDefinition1=commandOrDefinition();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, commandOrDefinition1.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_parse55); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			EOF2_tree = (Object)adaptor.create(EOF2);
			adaptor.addChild(root_0, EOF2_tree);
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "parse"


	public static class commandOrDefinition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "commandOrDefinition"
	// R5RS.g3:49:1: commandOrDefinition : ( ( syntaxDefinition )=> syntaxDefinition | ( definition )=> definition | ( '(' BEGIN commandOrDefinition )=> '(' ! BEGIN ^ ( commandOrDefinition )+ ')' !| command );
	public final R5RSParser.commandOrDefinition_return commandOrDefinition() throws RecognitionException {
		R5RSParser.commandOrDefinition_return retval = new R5RSParser.commandOrDefinition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal5=null;
		Token BEGIN6=null;
		Token char_literal8=null;
		ParserRuleReturnScope syntaxDefinition3 =null;
		ParserRuleReturnScope definition4 =null;
		ParserRuleReturnScope commandOrDefinition7 =null;
		ParserRuleReturnScope command9 =null;

		Object char_literal5_tree=null;
		Object BEGIN6_tree=null;
		Object char_literal8_tree=null;

		try {
			// R5RS.g3:50:3: ( ( syntaxDefinition )=> syntaxDefinition | ( definition )=> definition | ( '(' BEGIN commandOrDefinition )=> '(' ! BEGIN ^ ( commandOrDefinition )+ ')' !| command )
			int alt3=4;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==82) ) {
				int LA3_1 = input.LA(2);
				if ( (synpred1_R5RS()) ) {
					alt3=1;
				}
				else if ( (synpred2_R5RS()) ) {
					alt3=2;
				}
				else if ( (synpred3_R5RS()) ) {
					alt3=3;
				}
				else if ( (true) ) {
					alt3=4;
				}

			}
			else if ( (LA3_0==CHARACTER||LA3_0==ELLIPSIS||LA3_0==FALSE||(LA3_0 >= NUM_10 && LA3_0 <= NUM_8)||LA3_0==STRING||LA3_0==TRUE||LA3_0==VARIABLE||(LA3_0 >= 87 && LA3_0 <= 88)) ) {
				alt3=4;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// R5RS.g3:50:6: ( syntaxDefinition )=> syntaxDefinition
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_syntaxDefinition_in_commandOrDefinition87);
					syntaxDefinition3=syntaxDefinition();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, syntaxDefinition3.getTree());

					}
					break;
				case 2 :
					// R5RS.g3:51:6: ( definition )=> definition
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_definition_in_commandOrDefinition118);
					definition4=definition();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, definition4.getTree());

					}
					break;
				case 3 :
					// R5RS.g3:52:6: ( '(' BEGIN commandOrDefinition )=> '(' ! BEGIN ^ ( commandOrDefinition )+ ')' !
					{
					root_0 = (Object)adaptor.nil();


					char_literal5=(Token)match(input,82,FOLLOW_82_in_commandOrDefinition134); if (state.failed) return retval;
					BEGIN6=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_commandOrDefinition137); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					BEGIN6_tree = new BeginCommandOrDefinitionNode(BEGIN6) ;
					root_0 = (Object)adaptor.becomeRoot(BEGIN6_tree, root_0);
					}

					// R5RS.g3:52:82: ( commandOrDefinition )+
					int cnt2=0;
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==CHARACTER||LA2_0==ELLIPSIS||LA2_0==FALSE||(LA2_0 >= NUM_10 && LA2_0 <= NUM_8)||LA2_0==STRING||LA2_0==TRUE||LA2_0==VARIABLE||LA2_0==82||(LA2_0 >= 87 && LA2_0 <= 88)) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// R5RS.g3:52:82: commandOrDefinition
							{
							pushFollow(FOLLOW_commandOrDefinition_in_commandOrDefinition143);
							commandOrDefinition7=commandOrDefinition();
							state._fsp--;
							if (state.failed) return retval;
							if ( state.backtracking==0 ) adaptor.addChild(root_0, commandOrDefinition7.getTree());

							}
							break;

						default :
							if ( cnt2 >= 1 ) break loop2;
							if (state.backtracking>0) {state.failed=true; return retval;}
							EarlyExitException eee = new EarlyExitException(2, input);
							throw eee;
						}
						cnt2++;
					}

					char_literal8=(Token)match(input,83,FOLLOW_83_in_commandOrDefinition146); if (state.failed) return retval;
					}
					break;
				case 4 :
					// R5RS.g3:53:40: command
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_command_in_commandOrDefinition188);
					command9=command();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, command9.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "commandOrDefinition"


	public static class syntaxDefinition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "syntaxDefinition"
	// R5RS.g3:56:1: syntaxDefinition : '(' ! DEFINE_SYNTAX ^ keyword transformerSpec ')' !;
	public final R5RSParser.syntaxDefinition_return syntaxDefinition() throws RecognitionException {
		R5RSParser.syntaxDefinition_return retval = new R5RSParser.syntaxDefinition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal10=null;
		Token DEFINE_SYNTAX11=null;
		Token char_literal14=null;
		ParserRuleReturnScope keyword12 =null;
		ParserRuleReturnScope transformerSpec13 =null;

		Object char_literal10_tree=null;
		Object DEFINE_SYNTAX11_tree=null;
		Object char_literal14_tree=null;

		try {
			// R5RS.g3:57:3: ( '(' ! DEFINE_SYNTAX ^ keyword transformerSpec ')' !)
			// R5RS.g3:57:6: '(' ! DEFINE_SYNTAX ^ keyword transformerSpec ')' !
			{
			root_0 = (Object)adaptor.nil();


			char_literal10=(Token)match(input,82,FOLLOW_82_in_syntaxDefinition202); if (state.failed) return retval;
			DEFINE_SYNTAX11=(Token)match(input,DEFINE_SYNTAX,FOLLOW_DEFINE_SYNTAX_in_syntaxDefinition205); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			DEFINE_SYNTAX11_tree = (Object)adaptor.create(DEFINE_SYNTAX11);
			root_0 = (Object)adaptor.becomeRoot(DEFINE_SYNTAX11_tree, root_0);
			}

			pushFollow(FOLLOW_keyword_in_syntaxDefinition208);
			keyword12=keyword();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, keyword12.getTree());

			pushFollow(FOLLOW_transformerSpec_in_syntaxDefinition210);
			transformerSpec13=transformerSpec();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, transformerSpec13.getTree());

			char_literal14=(Token)match(input,83,FOLLOW_83_in_syntaxDefinition212); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "syntaxDefinition"


	public static class definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// R5RS.g3:60:1: definition : ( '(' ! DEFINE ^ ( variable expression ')' !| '(' ! variable defFormals ')' ! body ')' !) | '(' ! BEGIN ^ ( definition )* ')' !);
	public final R5RSParser.definition_return definition() throws RecognitionException {
		R5RSParser.definition_return retval = new R5RSParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal15=null;
		Token DEFINE16=null;
		Token char_literal19=null;
		Token char_literal20=null;
		Token char_literal23=null;
		Token char_literal25=null;
		Token char_literal26=null;
		Token BEGIN27=null;
		Token char_literal29=null;
		ParserRuleReturnScope variable17 =null;
		ParserRuleReturnScope expression18 =null;
		ParserRuleReturnScope variable21 =null;
		ParserRuleReturnScope defFormals22 =null;
		ParserRuleReturnScope body24 =null;
		ParserRuleReturnScope definition28 =null;

		Object char_literal15_tree=null;
		Object DEFINE16_tree=null;
		Object char_literal19_tree=null;
		Object char_literal20_tree=null;
		Object char_literal23_tree=null;
		Object char_literal25_tree=null;
		Object char_literal26_tree=null;
		Object BEGIN27_tree=null;
		Object char_literal29_tree=null;

		try {
			// R5RS.g3:61:3: ( '(' ! DEFINE ^ ( variable expression ')' !| '(' ! variable defFormals ')' ! body ')' !) | '(' ! BEGIN ^ ( definition )* ')' !)
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==82) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==DEFINE) ) {
					alt6=1;
				}
				else if ( (LA6_1==BEGIN) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// R5RS.g3:61:6: '(' ! DEFINE ^ ( variable expression ')' !| '(' ! variable defFormals ')' ! body ')' !)
					{
					root_0 = (Object)adaptor.nil();

